Add introductory text

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -4,7 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PhD and Supervisor data "
+    "The project is based on NARCIS (National Academic Research and Collaboration Information System) harvested meta-data from different PhD thesis repositories in The Netherlands (NARCIS, n.d.). NARCIS aggregates the information on scholarly work across Dutch academic institutions. NARCIS followed standardized protocols during the extraction, ensuring consistency and interoperability across various data sources.\n",
+    "\n",
+    "By now the NARCIS dataset has been included into OpenAIRE.\n",
+    "\n",
+    "To obtain the original dataset, please contact @tamarinde [on Github](https://github.com/tamarinde).\n",
+    "\n",
+    "This script is intended to clean the original dataset that was obtained from the XXX study. The raw dataset should be placed in\n",
+    "\n",
+    "`data/raw/pairs_sups_phds.csv`\n",
+    "\n",
+    "Make sure that the columns have the following names: `thesis_identifier`,`contributor`,`contributor_order`,`institution`,`author_name`,`title`,`year`,`language`\n",
+    "\n",
+    "This notebook cleans the raw data in the following ways\n",
+    "\n",
+    "1. Remove wrongly detected conributor entries that are not people. For this, we make use of spacy and the `xx_ent_wiki_sm` model\n",
+    "2. Standardize the contributor names to \"Last name, Initials\" -> let's check here if we are actually throwing away information here and if we should keep the first names\n",
+    "3. Aggregate all rows per publication/PhD student into one row with all the contributors\n",
+    "4. Pivot the dataset, to get to one row per publication/PhD student, with one columns per contributor\n",
+    "5. Export the dataset to `data/cleaned/sampled_pubs.csv`"
    ]
   },
   {
