Add descriptive headers

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -48,6 +48,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Settings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -81,6 +88,13 @@
     "]\n",
     "\n",
     "removed_contributors = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read dataset"
    ]
   },
   {
