Messy and big commit: Restructure code, improve output formatting and reorganize sections.

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -60,9 +60,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load, and if notvailable, download the spacy nlp model \n",
-    "model_name = \"xx_ent_wiki_sm\" # multilingual NER model\n",
-    "nlp = ensure_and_load_spacy_model(model_name)"
+    "# limit the number of rows that are shown with printing dataframes\n",
+    "pd.set_option('display.max_rows', 5)\n",
+    "\n",
+    "# Number of rows to read of the full dataset.\n",
+    "NROWS = None # None for all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean and restructure dataset"
    ]
   },
   {
@@ -71,12 +80,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize values\n",
-    "NROWS = 100 # None for all\n",
+    "# Load, and if notvailable, download the spacy nlp model \n",
+    "model_name = \"xx_ent_wiki_sm\" # multilingual NER model\n",
+    "nlp = ensure_and_load_spacy_model(model_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When checking if contributor names are actual names of people, the functions use a whitelist and a blacklist. If a name is on the whitelist, it will always be considered to be a name. Strings on the blacklist will however always be discared.\n",
     "\n",
-    "# names that spacy does not recognize as such\n",
+    "The whitelist can be fed from the file `data/removed_contributors.csv` that is created when running the script.\n",
+    "\n",
+    "The blacklist can be fed from non-people names that end up in the filtered dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Names that spacy does not recognize as such\n",
     "# NOTE: Add the verbatim names here, not the standardized target notation \n",
-    "# This list can be fed from removed_contributors.csv that is created when running the script\n",
+    "\n",
     "WHITELIST = [ \n",
     "    \"Oosterlaan, J.\",\n",
     "    \"Nollet, F.\"\n",
@@ -106,7 +134,22 @@
     "# Read data\n",
     "pairs_raw = pd.read_csv(\"data/raw/pairs_sups_phds.csv\", nrows=NROWS)\n",
     "pairs_raw = pairs_raw.convert_dtypes() # make sure all integer columns are integer dtype \n",
-    "pairs_raw.head()"
+    "pairs_raw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove duplicates, rows where contributor is NA or not a person"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The raw data contains a lot of junk rows for contributors that the original scraper identified, but that are actually the institution, the reseach field or other junk.\n",
+    "To remove contributors that are not people, we are using spacy with the model chosen above. The detecion still has a lot of false positives and negatives, but we can rid of them via a the custom `WHITELIST` and `BLACKLIST`."
    ]
   },
   {
@@ -125,7 +168,15 @@
     "csv_path = \"data/removed_contributors.csv\"\n",
     "pairs_filtered = remove_non_person_contributors_and_export(pairs_filtered, csv_path, nlp, WHITELIST, BLACKLIST)\n",
     "\n",
-    "print(f\"{len(pairs_filtered)} columns are left.\")"
+    "print(f\"{len(pairs_filtered)} columns are left.\")\n",
+    "pairs_filtered\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Standardize names to Last name, Initials"
    ]
   },
   {
@@ -137,7 +188,25 @@
     "# Standardize names\n",
     "pairs_std = pairs_filtered\n",
     "# Apply name standardization to the contributor column\n",
-    "pairs_std['contributor'] = pairs_filtered['contributor'].apply(format_name_to_lastname_initials)"
+    "pairs_std['contributor'] = pairs_filtered['contributor'].apply(format_name_to_lastname_initials)\n",
+    "\n",
+    "pairs_std"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pivot\n",
+    "\n",
+    "Aggregate and unpack so that we get one row per publication and one column per contributor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Aggregate"
    ]
   },
   {
@@ -163,7 +232,16 @@
     "aggregated = aggregated.reset_index()\n",
     "    \n",
     "# make sure the contributor is a sequence from 1 to n_contributors\n",
-    "aggregated['contributor_order'] = aggregated['contributor_order'].apply(lambda lst: list(range(1, len(lst) + 1)))\n"
+    "aggregated['contributor_order'] = aggregated['contributor_order'].apply(lambda lst: list(range(1, len(lst) + 1)))\n",
+    "\n",
+    "aggregated\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Unpack contributor rows"
    ]
   },
   {
@@ -200,30 +278,14 @@
     "# Ensure correct data types and fill missing values with a suitable placeholder if necessary\n",
     "pubs = pubs.convert_dtypes()\n",
     "\n",
-    "len(pubs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export a sample of the dataset to easily share it\n",
-    "seed = 42 # fixed seed\n",
-    "\n",
-    "# Sample 100 random lines from the DataFrame\n",
-    "#sampled_pubs = pubs.sample(n=50, random_state=seed)\n",
-    "\n",
-    "# Export the sampled DataFrame to a CSV file\n",
-    "#sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)"
+    "pubs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Call Scopus API"
+    "## Export cleaned dataset"
    ]
   },
   {
@@ -232,104 +294,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import src.api_helpers as api_helpers\n",
-    "\n",
-    "from src.api_helpers import find_publications\n",
-    "from src.api_helpers import find_first_publication\n",
-    "from src.api_helpers import common_pub_author_and_contributor_1_row\n",
-    "\n",
-    "import importlib\n",
-    "importlib.reload(api_helpers)\n",
-    "\n",
-    "# to find the configuration file, run\n",
-    "# import pybliometrics\n",
-    "# pybliometrics.scopus.utils.constants.CONFIG_FILE"
+    "pubs.to_csv('data/cleaned/pubs.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test if I have the connection, in case my authentication does not work\n",
-    "from pybliometrics.scopus import ScopusSearch\n",
-    "s = ScopusSearch('ISSN(1532-849X) AND PUBYEAR IS 2010',subscriber=False)\n",
-    "print(s.results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# look up publications of one contributor\n",
-    "author_last_name = \"van Neerven\"\n",
-    "author_initials = \"J\"\n",
-    "publications = find_publications(author_last_name, author_initials)\n",
-    "\n",
-    "publications.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pubs_sample = pubs.head(1)\n",
-    "pubs_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# go through a test set of the publications\n",
-    "\n",
-    "#common_pub_author_and_contributor_1_row(pubs_sample)\n",
-    "\n",
-    "author = pubs_sample['author_name'].iloc[0]\n",
-    "contributor = pubs_sample['contributor_1'].iloc[0]\n",
-    "\n",
-    "publications_author = find_publications(*author.split(', ')) if author is not None else []\n",
-    "publications_contributor = find_publications(*contributor.split(', ')) if contributor is not None else []\n",
-    "\n",
-    "# # Look up both author_name and contributor_1 and find the first common publication, if there is any\n",
-    "# pubs_sample['common_publication'] = pubs_sample.apply(common_pub_author_and_contributor_1_row, axis=1)\n",
-    "# pubs_sample\n",
-    "\n",
-    "contributor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So far, so good. The next step would be to get the first author each that the API returns and sees if they both share a publication. If that's not the case, the code should move to the next match for author_name, then contributor_1 and so on. The added layer of iteration is somewhat looking for plausible matches, namely matches that share a publication. We might still have a lot of false positives, this way though.\n",
-    "\n",
-    "Another layer we can build in is to verify the affilliation of the authors (that is in the matching publication). We can then whitelist papers where the PhD name is listed under the correct affiliation on that paper. As a stand-in we can also only count contributor_1 that had the same affiliation. To be determined if this works.\n",
-    "\n",
-    "We can also get some diagnostics on how many name matches we got per name in the dataframe. This should give us some idea on how many API calls we need to do and how certain we are with the name matching. \n",
-    "We should also check how much of TiU's call budget we would us up to go throught the entire list. \n",
-    "\n",
-    "There seems to be an affiliation ID"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
