Improve sampling sanity

--- a/Open_Alex_Extraction_Final.ipynb
+++ b/Open_Alex_Extraction_Final.ipynb
@@ -136,9 +136,17 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"biomedical_data.csv\")\n",
-    "sampled_df = df.sample(n=5, random_state=40)\n",
-    "# sampled_df = df"
+    "# Number of rows to read of the full dataset.\n",
+    "NROWS = None # None for all\n",
+    "\n",
+    "sampled_df = pd.read_csv('biomedical_data.csv')\n",
+    "\n",
+    "if NROWS == None:\n",
+    "    n_sample = len(sampled_df)\n",
+    "else:\n",
+    "    n_sample = NROWS\n",
+    "\n",
+    "sampled_df = sampled_df.sample(n=n_sample, random_state=40).reset_index(drop=True)\n"
    ]
   },
   {
@@ -1449,7 +1457,7 @@
    },
    "outputs": [],
    "source": [
-    "# df_clean.to_csv('complete_extraction.csv', index=False)"
+    "#df_clean.to_csv('complete_extraction.csv', index=False)"
    ]
   }
  ],
