Preview sampled df

--- a/Open_Alex_Extraction_Final.ipynb
+++ b/Open_Alex_Extraction_Final.ipynb
@@ -146,7 +146,9 @@
     "else:\n",
     "    n_sample = NROWS\n",
     "\n",
-    "sampled_df = sampled_df.sample(n=n_sample, random_state=40).reset_index(drop=True)\n"
+    "sampled_df = sampled_df.sample(n=n_sample, random_state=40).reset_index(drop=True)\n",
+    "\n",
+    "sampled_df\n"
    ]
   },
   {
