Export full cleaned dataset to data/cleaned/pubs.csv

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# Initialize values\n",
-    "NROWS = 100 # None for all\n",
+    "NROWS = None # None for all\n",
     "\n",
     "# names that spacy does not recognize as such\n",
     "# NOTE: Add the verbatim names here, not the standardized target notation \n",
@@ -74,7 +74,7 @@
     "# Read data\n",
     "pairs_raw = pd.read_csv(\"data/raw/pairs_sups_phds.csv\", nrows=NROWS)\n",
     "pairs_raw = pairs_raw.convert_dtypes() # make sure all integer columns are integer dtype \n",
-    "pairs_raw.head()"
+    "pairs_raw"
    ]
   },
   {
@@ -184,7 +184,10 @@
     "#sampled_pubs = pubs.sample(n=50, random_state=seed)\n",
     "\n",
     "# Export the sampled DataFrame to a CSV file\n",
-    "#sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)"
+    "#sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)\n",
+    "\n",
+    "# Export the sampled DataFrame to a CSV file\n",
+    "pubs.to_csv('data/cleaned/pubs.csv', index=False)"
    ]
   },
   {
@@ -311,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
