Pipe print output to logfile

--- a/Open_Alex_Extraction_Final.ipynb
+++ b/Open_Alex_Extraction_Final.ipynb
@@ -27,7 +27,8 @@
     "import re\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "from os import path"
+    "from os import path\n",
+    "import contextlib # piping print output to logfile"
    ]
   },
   {
@@ -1013,44 +1014,50 @@
    "source": [
     "dois_data = []  # empty list to store data for each row of the df\n",
     "\n",
-    "for i in tqdm(range(len(sampled_df))):  \n",
-    "    contributors = contributors_DOIs(i)  # get the DOIs of contributors for every row (i)\n",
+    "# The output of all print statements within the block will be written to 'lookup_log.txt'\n",
+    "with open('lookup_log.txt', 'w') as log_file:\n",
+    "    # Redirect the standard output to the file\n",
+    "    with contextlib.redirect_stdout(log_file):\n",
+    "        \n",
+    "        for i in tqdm(range(len(sampled_df))):  \n",
+    "            contributors = contributors_DOIs(i)  # get the DOIs of contributors for every row (i)\n",
     "\n",
-    "    # check if there are no DOIs for contributors or if none of the contributors are in the Open Alex database\n",
-    "    if contributors == \"None of the contributors is in Open Alex database\" or contributors == \"No DOIs for the associated contributors found\":\n",
-    "        message_contributors = contributors  # store the message for why there are no DOIs for contributors\n",
-    "        contributors = np.nan  # set contributors to NaN since no valid DOIs were found\n",
-    "        contr_count = 0  # set the count of contributors with DOIs to 0\n",
-    "        contr_dois_count = 0  # set the cumulative count of DOIs for contributors to 0\n",
-    "    else:\n",
-    "        # calculate the number of contributors with DOIs and the cumulative count of DOIs\n",
-    "        contr_count = sum(1 for lst in contributors.values() if lst)\n",
-    "        contr_dois_count = sum(len(lst) for lst in contributors.values())\n",
-    "        message_contributors = np.nan  # no error message needed since DOIs were found\n",
+    "            # check if there are no DOIs for contributors or if none of the contributors are in the Open Alex database\n",
+    "            if contributors == \"None of the contributors is in Open Alex database\" or contributors == \"No DOIs for the associated contributors found\":\n",
+    "                message_contributors = contributors  # store the message for why there are no DOIs for contributors\n",
+    "                contributors = np.nan  # set contributors to NaN since no valid DOIs were found\n",
+    "                contr_count = 0  # set the count of contributors with DOIs to 0\n",
+    "                contr_dois_count = 0  # set the cumulative count of DOIs for contributors to 0\n",
+    "            else:\n",
+    "                # calculate the number of contributors with DOIs and the cumulative count of DOIs\n",
+    "                contr_count = sum(1 for lst in contributors.values() if lst)\n",
+    "                contr_dois_count = sum(len(lst) for lst in contributors.values())\n",
+    "                message_contributors = np.nan  # no error message needed since DOIs were found\n",
     "\n",
-    "    author_dois = author_DOIs(i)  # get the DOIs of the author (PhD candidate) for the current row (i)\n",
+    "            author_dois = author_DOIs(i)  # get the DOIs of the author (PhD candidate) for the current row (i)\n",
     "\n",
-    "    # check if there are no DOIs for the author or if the author is not in the Open Alex database\n",
-    "    if author_dois == \"PhD candidate (probably) not in Open Alex database\" or author_dois == \"No DOIs for the PhD candidate found\":\n",
-    "        message_author = author_dois  # store the message for why there are no DOIs for the author\n",
-    "        author_dois = np.nan  # set author DOIs to NaN since no valid DOIs were found\n",
-    "        count = 0  # set the count of DOIs for the author to 0\n",
-    "    else:\n",
-    "        count = len(author_dois)  # set the count of DOIs for the author\n",
-    "        message_author = np.nan  # no error message needed since DOIs were found\n",
+    "            # check if there are no DOIs for the author or if the author is not in the Open Alex database\n",
+    "            if author_dois == \"PhD candidate (probably) not in Open Alex database\" or author_dois == \"No DOIs for the PhD candidate found\":\n",
+    "                message_author = author_dois  # store the message for why there are no DOIs for the author\n",
+    "                author_dois = np.nan  # set author DOIs to NaN since no valid DOIs were found\n",
+    "                count = 0  # set the count of DOIs for the author to 0\n",
+    "            else:\n",
+    "                count = len(author_dois)  # set the count of DOIs for the author\n",
+    "                message_author = np.nan  # no error message needed since DOIs were found\n",
     "\n",
-    "    # create a dictionary with all the relevant information for the current row\n",
-    "    data = {\n",
-    "        'PhD candidate': get_name_without_spaces(i),  \n",
-    "        'PhD candidate DOIs found in OpenAlex': author_dois,  \n",
-    "        'DOIs count': count,  \n",
-    "        'Contributors-DOIs Dictionary': contributors, \n",
-    "        'Number of contributors with DOIs found in OpenAlex': contr_count, \n",
-    "        'Cumulative found Contributor DOIs count': contr_dois_count,\n",
-    "        'Why no DOIs for PhD candidate': message_author,  \n",
-    "        'Why no DOIs for contributors': message_contributors \n",
-    "    }\n",
-    "    dois_data.append(data)  # append the dictionary to the list of data\n",
+    "            # create a dictionary with all the relevant information for the current row\n",
+    "            data = {\n",
+    "                'PhD candidate': get_name_without_spaces(i),  \n",
+    "                'PhD candidate DOIs found in OpenAlex': author_dois,  \n",
+    "                'DOIs count': count,  \n",
+    "                'Contributors-DOIs Dictionary': contributors, \n",
+    "                'Number of contributors with DOIs found in OpenAlex': contr_count, \n",
+    "                'Cumulative found Contributor DOIs count': contr_dois_count,\n",
+    "                'Why no DOIs for PhD candidate': message_author,  \n",
+    "                'Why no DOIs for contributors': message_contributors \n",
+    "            }\n",
+    "            dois_data.append(data)  # append the dictionary to the list of data\n",
+    "\n",
     "\n",
     "dois_df = pd.DataFrame(dois_data)  # convert the list of dictionaries into a DataFrame"
    ]
@@ -1459,7 +1466,7 @@
    },
    "outputs": [],
    "source": [
-    "#df_clean.to_csv('complete_extraction.csv', index=False)"
+    "df_clean.to_csv('complete_extraction.csv', index=False)"
    ]
   }
  ],
