Logfile in utf-8 encoding to handle special characters

--- a/Open_Alex_Extraction_Final.ipynb
+++ b/Open_Alex_Extraction_Final.ipynb
@@ -1015,7 +1015,7 @@
     "dois_data = []  # empty list to store data for each row of the df\n",
     "\n",
     "# The output of all print statements within the block will be written to 'lookup_log.txt'\n",
-    "with open('lookup_log.txt', 'w') as log_file:\n",
+    "with open('lookup_log.txt', 'w', encoding='utf-8') as log_file:\n",
     "    # Redirect the standard output to the file\n",
     "    with contextlib.redirect_stdout(log_file):\n",
     "        \n",
