Add notebook settings

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -30,6 +30,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Automatically reloads any modules that are imported, \n",
+    "# so that any changes made to the module files are reflected # without needing to restart the Jupyter kernel.\n",
+    "# load autoreload module\n",
+    "%load_ext autoreload\n",
+    "# mode 1 reloads only when an import statement is called. For production\n",
+    "# mode 2 reloads before execution of every cell\n",
+    "%autoreload 2\n",
+    "\n",
+    "# limit the number of rows that are shown with printing dataframes\n",
+    "pd.set_option('display.max_rows', 5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
