Rename column author_name to phd_name

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -188,7 +188,7 @@
     "    pubs_list.append(pub_dict)\n",
     "\n",
     "# Convert the list of dictionaries to a DataFrame\n",
-    "pubs = pd.DataFrame(pubs_list)\n",
+    "pubs = pd.DataFrame(pubs_list).reset_index(drop=True)\n",
     "\n",
     "# Ensure correct data types and fill missing values with a suitable placeholder if necessary\n",
     "pubs = pubs.convert_dtypes()\n",
@@ -212,6 +212,8 @@
     "#sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)\n",
     "\n",
     "# Export the sampled DataFrame to a CSV file\n",
+    "pubs.rename(columns={\"author_name\": \"phd_name\"}, inplace=True)\n",
+    "\n",
     "pubs.to_csv('data/cleaned/pubs.csv', index=False)"
    ]
   }
